--- a/.tbstore.yml
+++ b/.tbstore.yml
@@ -8,4 +8,11 @@ description_short: The block supplier module adds a list of your suppliers to yo
 description: description.md
 images:
   - image-1.png
+gdpr_compliant: false
 license: AFL
+php_version:
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
